--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -24,7 +24,7 @@
                     <label for="title" class="<%= (@campaign.event_hour)? 'active' : '' %>">Hora</label>
                   </div>
                   <div class="col s12 l3 input-field">
-                    <%= f.text_field :location, 'data-length': "20" %>
+                    <%= f.text_field :locale, 'data-length': "20" %>
                     <label for="title" class="<%= (@campaign.location)? 'active' : '' %>">Local</label>
                   </div>
                 </div>
